Correct z-index of header

--- a/blog/blog-temp.css
+++ b/blog/blog-temp.css
@@ -6,6 +6,7 @@ body {
 }
 
 #header {
+  z-index: 1;
   position: fixed;
   margin: 0;
   width: 100%;
